# GameOfLife

./: GameOfLife.cabal  stack.yaml
app/: GameOfLife.hs
src/GameOfLife/: Board.hs
