name:                GameOfLife
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/massiv>
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2020 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     GameOfLife.Board
  build-depends:       base >= 4.9 && < 5
                     , massiv
                     , pvar

  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints


executable GameOfLife
  main-is: GameOfLife.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >=4.7 && <5
              , GameOfLife
              , massiv
              , vector
              , gloss
              , GLUT
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
